poprawa błędów